Client-Server communication baseon on Retrofit beta 2.0.2.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Новости</string>
 
-
+    <string name="io_exception">Ошибка подключения к сети: %s</string>
 </resources>
