--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,20 @@
     <string name="app_name">Новости</string>
 
     <string name="io_exception">Ошибка подключения к сети: %s</string>
+
+    <string name="debug_item_title">Роскошь из Первоуральска: дизайнер-самоучка возвращает моду на кокошники, бисер и бахрому</string>
+    <string name="debug_item_date">09 ноября 2015, 09:59</string>
+    <string name="debug_item_content">– Один кокошник я делаю не меньше месяца. Расшиваю бисером, необычными бусинами, камнями. Часто использую вышивку,
+        разноцветные лоскуты, бахрому, тесьму и кружево. Вот этот, например, можно даже на шею надевать, как нагрудное украшение.
+        А этот идёт в комплекте с корсетом и браслетами. Условное название образа – "Птица Сирин". Кажется, в последнее время у меня развилась "гигантомания" –
+        хочется делать нарочито объёмные и сказочно красивые вещи, а потом использовать их в творческих фотосессиях.
+        28-летняя Люба Михалёва может говорить о своих работах долго, смотрит на них горящими глазами. Кажется, будто каждый раз она видит их впервые и не может поверить,
+        что всю эту красоту создала собственными руками. Она декорирует одежду в народном стиле, делает кокошники и браслеты-манжеты, ожерелья и ободки,
+        картины из блестящего бисера и декоративные игрушки.
+        Каждое украшение – в единственном экземпляре, с уникальным узором и историей. Работы у Любы получаются сказочные, можно даже сказать диковинные.
+        Их сложно описать словами – лучше поразглядывать в нашем фоторепортаже. Мастерская Любы находится в Первоуральске, в цокольном этаже местного дворца культуры.
+        Здесь она создает украшения ручной работы, занимается с детьми хореографией и проводит мастер-классы по собственной технике вышивания.
+        Говорит, ей важно передавать опыт другим и видеть, как радуются ученики, когда работа у них получается.
+        – Моё творчество – это приятная патология. Меня радует мысль, что это может принести пользу людям и вдохновить кого-то на творчество, – говорит Люба.</string>
+
 </resources>
