--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,11 @@
 <resources>
     <string name="app_name">Новости</string>
 
+    <string name="item_screen_title">Новость</string>
+
     <string name="io_exception">Ошибка подключения к сети: %s</string>
+
+    <string name="photo_viewer_title">%1$d из %2$d</string>
 
     <string name="debug_item_title">Роскошь из Первоуральска: дизайнер-самоучка возвращает моду на кокошники, бисер и бахрому</string>
     <string name="debug_item_date">09 ноября 2015, 09:59</string>
